2009-09-28  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Appointments/SOGoAptMailInvitation.m: Added Spanish definition.
	* SoObjects/Appointments/SOGoAptMailICalReply.m: Added Spanish definition.
	* SoObjects/Appointments/SOGoAptMailDeletion.m: Added Spanish definition.
	* SoObjects/Appointments/SOGoAptMailUpdate.m: Added Spanish definition.

2009-09-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m (+initialize): avoid a crash when
	SOGoProfileURL is not set.

2009-09-27  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Reworked the UIxMailPartSignedViewer to inherit
	from UIxMailPartMixedViewer.
	* UI/WebServerResources/SchedulerUI.js
	We allow empty calendar imports.
	* Avoid assumptions for .ics presence on URL
	subscriptions.

2009-09-25  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Renamed SoObjects/Contacts/SOGoContactLDAPFolder to
	SoObjects/Contacts/SOGoContactSourceFolder
	* Renamed SoObjects/SOGo/LDAPUserManager to
	SoObjects/SOGo/SOGoserManager.m
	* Added SoObjects/SOGo/SOGoSource.h and
	SoObjects/SOGo/SQLSource.{h,m}
	We now support authentication and address book sources
	coming from a SQL database. This can be used concurrently
	with LDAP sources. Modified many classes to reflect this
	change.
	* SoObjects/SOGo/LDAPSource.m 
	We trim the bind field value prior to adding it to our
	LDAP search filter.
	* UI/MailPartViewers/UIxMailPartSignedViewer.m and friends:
	We now show more information on the S/MIME encoded messages.
	We also handle correctly multipart/alternative messages.

2009-09-24  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m (bareFetchFields:): Handled
	the Exception when all conditions are nil.
	* SoObjects/Contacts/NGVCard+SOGo.m (ldifString): Made corrections
	reflecting from the fixes in NGVCard to properly format an address.

2009-09-23  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m (importComponent:): Fixed 