@@ -44,6 +44,8 @@
 
 - (NSString *) doubleQuotedString;
 
+- (NSString *) stringByEscapingURLPart;
+
 - (NSString *) jsonRepresentation;
 
 - (NSString *) asCSSIdentifier;
