@@ -1143,11 +1143,12 @@ SEL SOGoSelectorForPropertySetter (NSString *property)
 {
   NSURL *serverURL, *url;
   NSMutableArray *path;
-  NSString *baseURL, *urlMethod, *fullHost;
+  NSString *baseURL, *urlMethod, *fullHost, *part;
   NSNumber *port;
+  int count, max;
 
   serverURL = [context serverURL];
-  baseURL = [[self baseURLInContext: context] stringByUnescapingURL];
+  baseURL = [self baseURLInContext: context];
   path = [NSMutableArray arrayWithArray: [baseURL componentsSeparatedByString:
 						    @"/"]];
   if ([baseURL hasPrefix: @"http"])
@@ -1163,6 +1164,14 @@ SEL SOGoSelectorForPropertySetter (NSString *property)
 	[path replaceObjectAtIndex: 2 withObject: expected];
       else
 	[path insertObject: expected atIndex: 2];
+    }
+
+  max = [path count];
+  for (count = 3; count < max; count++)
+    {
+      part = [path objectAtIndex: count];
+      [path replaceObjectAtIndex: count
+                      withObject: [part stringByEscapingURLPart]];
     }
 
   port = [serverURL port];
